-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
When using the ioctl interface it is possible to pass interfaces without name specified.
During lnet_startup_lndnet the interface name has to be checked except it is the loopback interface. If it is the only interface in the network and the network would be empty fail.
Steps to reproduce on an ioctl based interface
modprobe lnet
lnetctl lnet configure
lnetctl net add --net o2ib --if mlxib1
lnetctl net add --net o2ib --if mlxib1 --ip2net "o2ib 172.30.12.*"
- is related to
-
LU-11859 panic on lnetctl net add
-
- Open
-